# easynet

./: .gitignore  README.md
anonymized-instances/csv-format/: anonym-week-0.csv  anonym-week-1.csv  anonym-week-10.csv  anonym-week-11.csv  anonym-week-12.csv  anonym-week-13.csv  anonym-week-14.csv  anonym-week-15.csv  anonym-week-16.csv  anonym-week-17.csv  anonym-week-18.csv  anonym-week-19.csv  anonym-week-2.csv  anonym-week-20.csv  anonym-week-21.csv  anonym-week-22.csv  anonym-week-23.csv  anonym-week-24.csv  anonym-week-25.csv  anonym-week-26.csv  anonym-week-27.csv  anonym-week-28.csv  anonym-week-29.csv  anonym-week-3.csv  anonym-week-30.csv  anonym-week-31.csv  anonym-week-32.csv  anonym-week-33.csv  anonym-week-34.csv  anonym-week-35.csv  anonym-week-36.csv  anonym-week-37.csv  anonym-week-38.csv  anonym-week-39.csv  anonym-week-4.csv  anonym-week-40.csv  anonym-week-41.csv  anonym-week-42.csv  anonym-week-43.csv  anonym-week-44.csv  (+5 more)
anonymized-instances/txt-format/: anonym-week-0.txt  anonym-week-1.txt  anonym-week-10.txt  anonym-week-11.txt  anonym-week-12.txt  anonym-week-13.txt  anonym-week-14.txt  anonym-week-15.txt  anonym-week-16.txt  anonym-week-17.txt  anonym-week-18.txt  anonym-week-19.txt  anonym-week-2.txt  anonym-week-20.txt  anonym-week-21.txt  anonym-week-22.txt  anonym-week-23.txt  anonym-week-24.txt  anonym-week-25.txt  anonym-week-26.txt  anonym-week-27.txt  anonym-week-28.txt  anonym-week-29.txt  anonym-week-3.txt  anonym-week-30.txt  anonym-week-31.txt  anonym-week-32.txt  anonym-week-33.txt  anonym-week-34.txt  anonym-week-35.txt  anonym-week-36.txt  anonym-week-37.txt  anonym-week-38.txt  anonym-week-39.txt  anonym-week-4.txt  anonym-week-40.txt  anonym-week-41.txt  anonym-week-42.txt  anonym-week-43.txt  anonym-week-44.txt  (+5 more)
simulator/: CMakeLists.txt  ambulance.cpp  ambulance.hpp  app.cpp  data.hpp  dispatcher.cpp  dispatcher.hpp  emergency.cpp  emergency.hpp  helpers.cpp  helpers.hpp  hospital.cpp  hospital.hpp  routing.cpp  routing.hpp
